All-in-one Customer Support System/objects/desk_oauth_token__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>User-specific OAuth token data.</description>
    <fields>
        <fullName>is_access__c</fullName>
        <inlineHelpText>&apos;1&apos; is this is an access token; &apos;0&apos; if it&apos;s a request token.</inlineHelpText>
        <label>Is Access</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>secret__c</fullName>
        <inlineHelpText>Token secret for step 2.</inlineHelpText>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>Token</label>
        <type>TextArea</type>
    </fields>
    <label>Desk.com OAuth Token</label>
</CustomObject>